#3477 closed defect (fixed)
When there is an error ffmpeg still prints summary line
| Reported by: | ramitb | Owned by: | |
|---|---|---|---|
| Priority: | normal | Component: | ffmpeg |
| Version: | git-master | Keywords: | |
| Cc: | Blocked By: | ||
| Blocking: | Reproduced by developer: | no | |
| Analyzed by developer: | no |
Description
Summary of the bug: This is wierd one to describer but with the newer builds of ffmpeg one some conditions remuxing breaks but it still prints a summary as though the operation completed successfully.
For examples when using -ss 2 it breaks. I'm attaching a sample file (the originla is 800MB but I've cut out the first 2 MB to replicate the issue).
However now with the newer build it prints the summary line at the end.
How to reproduce:
ffmpeg -ss 2 -i Broken.wtv -vcodec copy -acodec copy remux.ts
ffmpeg version N-61478-g06a3185 Copyright (c) 2000-2014 the FFmpeg developers
built on Mar 15 2014 12:57:55 with gcc 4.8.0 (GCC)
configuration: --arch=x86 --target-os=mingw32 --cross-prefix=/Software/ffmpeg/sandbox/mingw-w64-i686/bin/i686-w64-ming
w32- --pkg-config=pkg-config --enable-gpl --enable-libx264 --enable-avisynth --enable-libxvid --enable-libmp3lame --enab
le-version3 --enable-zlib --enable-librtmp --enable-libvorbis --enable-libtheora --enable-libspeex --enable-libopenjpeg
--enable-gnutls --enable-libgsm --enable-libfreetype --enable-libopus --disable-w32threads --enable-frei0r --enable-filt
er=frei0r --enable-libvo-aacenc --enable-bzlib --enable-libxavs --extra-cflags=-DPTW32_STATIC_LIB --enable-libopencore-a
mrnb --enable-libopencore-amrwb --enable-libvo-amrwbenc --enable-libschroedinger --enable-libvpx --enable-libilbc --pref
ix=/Software/ffmpeg/sandbox/mingw-w64-i686/i686-w64-mingw32 --enable-static --disable-shared --enable-libsoxr --enable-f
ontconfig --enable-libass --enable-libutvideo --enable-libbluray --enable-iconv --enable-libtwolame --extra-cflags=-DLIB
TWOLAME_STATIC --enable-libzvbi --enable-libcaca --enable-libmodplug --extra-libs=-lstdc++ --extra-libs=-lpng --enable-l
ibvidstab --extra-cflags= --extra-cflags= --enable-nonfree --enable-libfdk-aac --enable-libfaac --enable-runtime-cpudete
ct
libavutil 52. 66.101 / 52. 66.101
libavcodec 55. 52.102 / 55. 52.102
libavformat 55. 34.101 / 55. 34.101
libavdevice 55. 11.100 / 55. 11.100
libavfilter 4. 3.100 / 4. 3.100
libswscale 2. 5.101 / 2. 5.101
libswresample 0. 18.100 / 0. 18.100
libpostproc 52. 3.100 / 52. 3.100
[wtv @ 04013620] truncated file
[mpeg2video @ 04014e00] Invalid frame dimensions 0x0.
Last message repeated 10 times
Input #0, wtv, from 'Broken.wtv':
Metadata:
WM/MediaClassPrimaryID: db9830bd-3ab3-4fab-8a371a995f7ff74
WM/MediaClassSecondaryID: ba7f258a-62f7-47a9-b21f4651c42a000
Title : Fireman Sam
WM/SubTitleDescription: When Sarah hears the legend of the Pontypandyness Monster, she pretends to have seen the cre
ature in order to boost visitors to the mountains on her granddad Gareth's train, The Pontypandy Flyer.
genre : Kids;Other Kids
WM/OriginalReleaseTime: 0
WM/MediaCredits : ;;;
service_provider: ABC2 / ABC4
service_name : ABC2 / ABC4
WM/MediaNetworkAffiliation: ABC2 / ABC4
WM/MediaOriginalChannel: 22
WM/MediaOriginalChannelSubNumber: 0
WM/MediaOriginalBroadcastDateTime: 0001-01-01T00:00:00Z
WM/MediaOriginalRunTime: 12347631626
WM/MediaIsStereo: false
WM/MediaIsRepeat: false
WM/MediaIsLive : false
WM/MediaIsTape : false
WM/MediaIsDelay : false
WM/MediaIsSubtitled: false
WM/MediaIsMovie : false
WM/MediaIsPremiere: false
WM/MediaIsFinale: false
WM/MediaIsSAP : false
WM/MediaIsSport : false
WM/Provider : MediaCenterDefault
WM/VideoClosedCaptioning: false
WM/WMRVEncodeTime: 2012-12-08 23:32:26
WM/WMRVSeriesUID: !GenericSeries!Fireman Sam
WM/WMRVServiceID: !Generated!c501b9cbcb294c728af1c1f829ab02e0
WM/WMRVProgramID: !Loaders!Glid!Programs!12801:609:738!36006
WM/WMRVRequestID: 0
WM/WMRVScheduleItemID: 0
WM/WMRVQuality : 0
WM/WMRVOriginalSoftPrePadding: 427
WM/WMRVOriginalSoftPostPadding: 300
WM/WMRVHardPrePadding: 4294967169
WM/WMRVHardPostPadding: 0
WM/WMRVATSCContent: false
WM/WMRVDTVContent: true
WM/WMRVHDContent: false
Duration : 13290718768
WM/WMRVEndTime : 2012-12-08 23:54:35
WM/WMRVBitrate : 4.763701
WM/WMRVKeepUntil: 4294967295
WM/WMRVActualSoftPrePadding: 518
WM/WMRVActualSoftPostPadding: 300
WM/WMRVContentProtected: false
WM/WMRVContentProtectedPercent: 0
WM/WMRVExpirationSpan: 9223372036854775807
WM/WMRVInBandRatingSystem: 255
WM/WMRVInBandRatingLevel: 255
WM/WMRVInBandRatingAttributes: 0
WM/WMRVWatched : false
Duration: 00:22:08.64, start: 1.353129, bitrate: 12 kb/s
Stream #0:0[0x20](eng): Audio: mp2 (P[0][0][0] / 0x0050), 48000 Hz, stereo, s16p, 256 kb/s
Stream #0:1[0x21](eng): Subtitle: dvb_teletext, 492x250
Stream #0:2[0x22]: Video: mpeg2video (Main), yuv420p(tv), 720x576 [SAR 64:45 DAR 16:9], max. 10000 kb/s, 25 fps, 25
tbr, 10000k tbn, 50 tbc
Stream #0:3[0xffffffff]: Video: mjpeg, yuvj420p(pc), 200x160 [SAR 96:96 DAR 5:4], 90k tbr, 90k tbn, 90k tbc
Metadata:
title : TV Thumbnail
Output #0, mpegts, to 'remux.ts':
Metadata:
WM/MediaClassPrimaryID: db9830bd-3ab3-4fab-8a371a995f7ff74
WM/MediaClassSecondaryID: ba7f258a-62f7-47a9-b21f4651c42a000
Title : Fireman Sam
WM/SubTitleDescription: When Sarah hears the legend of the Pontypandyness Monster, she pretends to have seen the cre
ature in order to boost visitors to the mountains on her granddad Gareth's train, The Pontypandy Flyer.
genre : Kids;Other Kids
WM/OriginalReleaseTime: 0
WM/MediaCredits : ;;;
service_provider: ABC2 / ABC4
service_name : ABC2 / ABC4
WM/MediaNetworkAffiliation: ABC2 / ABC4
WM/MediaOriginalChannel: 22
WM/MediaOriginalChannelSubNumber: 0
WM/MediaOriginalBroadcastDateTime: 0001-01-01T00:00:00Z
WM/MediaOriginalRunTime: 12347631626
WM/MediaIsStereo: false
WM/MediaIsRepeat: false
WM/MediaIsLive : false
WM/MediaIsTape : false
WM/MediaIsDelay : false
WM/MediaIsSubtitled: false
WM/MediaIsMovie : false
WM/MediaIsPremiere: false
WM/MediaIsFinale: false
WM/MediaIsSAP : false
WM/MediaIsSport : false
WM/Provider : MediaCenterDefault
WM/VideoClosedCaptioning: false
WM/WMRVEncodeTime: 2012-12-08 23:32:26
WM/WMRVSeriesUID: !GenericSeries!Fireman Sam
WM/WMRVServiceID: !Generated!c501b9cbcb294c728af1c1f829ab02e0
WM/WMRVProgramID: !Loaders!Glid!Programs!12801:609:738!36006
WM/WMRVRequestID: 0
WM/WMRVScheduleItemID: 0
WM/WMRVQuality : 0
WM/WMRVOriginalSoftPrePadding: 427
WM/WMRVOriginalSoftPostPadding: 300
WM/WMRVHardPrePadding: 4294967169
WM/WMRVHardPostPadding: 0
WM/WMRVATSCContent: false
WM/WMRVDTVContent: true
WM/WMRVHDContent: false
Duration : 13290718768
WM/WMRVEndTime : 2012-12-08 23:54:35
WM/WMRVBitrate : 4.763701
WM/WMRVKeepUntil: 4294967295
WM/WMRVActualSoftPrePadding: 518
WM/WMRVActualSoftPostPadding: 300
WM/WMRVContentProtected: false
WM/WMRVContentProtectedPercent: 0
WM/WMRVExpirationSpan: 9223372036854775807
WM/WMRVInBandRatingSystem: 255
WM/WMRVInBandRatingLevel: 255
WM/WMRVInBandRatingAttributes: 0
WM/WMRVWatched : false
encoder : Lavf55.34.101
Stream #0:0: Video: mpeg2video, yuv420p, 720x576 [SAR 64:45 DAR 16:9], q=2-31, max. 10000 kb/s, 25 fps, 90k tbn, 25
tbc
Stream #0:1(eng): Audio: mp2 (P[0][0][0] / 0x0050), 48000 Hz, stereo, 256 kb/s
Stream mapping:
Stream #0:2 -> #0:0 (copy)
Stream #0:0 -> #0:1 (copy)
Press [q] to stop, [?] for help
[mpegts @ 0400e840] pts (-78705) < dts (37800) in stream 0
av_interleaved_write_frame(): Invalid argument
frame= 1 fps=0.0 q=-1.0 Lsize= 157kB time=00:00:02.46 bitrate= 520.7kbits/s
video:81kB audio:140kB subtitle:0 data:0 global headers:0kB muxing overhead -29.011381%}}}
It shouldn't be printing the last line if there is an error (till now atleast whenever ffmpeg failed it would not print this line, which is what calling scripts and programs used to identify if ffmpeg broke while converting or succeeded)
{{{
video:81kB audio:140kB subtitle:0 data:0 global headers:0kB muxing overhead -29.011381%
}}}
For eg with build N-59362-ge079661 (and older) it doesn't print the last line.
Since this is a regression I'm marking it important.
Attachments (1)
Change History (4)
by , 12 years ago
| Attachment: | Broken.wtv added |
|---|
comment:1 by , 12 years ago
comment:3 by , 12 years ago
| Component: | undetermined → ffmpeg |
|---|---|
| Priority: | important → normal |
| Resolution: | invalid → fixed |
| Version: | unspecified → git-master |
ffmpeg prints a message "Conversion failed" since fed0aceb
Note:
See TracTickets
for help on using tickets.



Replying to ramitbhalla:
The conversion process successfully produced a frame on output, that has to be reported.
This is wrong; the correct way of testing that is to check the exit status. If there is a case where the exit status is not consistent with the result, please report it.