ffmpeg: print an error at the end if conversion failed

Fixes Ticket3477

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>
(cherry picked from commit fed0acebade8d27c428da5cad483cd6a5b64b354)

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>